# dungeon-daddy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: assess-tests.md  ui-test.md
.github/workflows/: test.yml
artifacts/layout/phase2/: crucible_l1.layout_feedback.json  crucible_l2.layout_feedback.json  crucible_l3.layout_feedback.json  implementation_summary.md  layout_feedback_summary.md  tomb_l1.layout_feedback.json
artifacts/layout/phase2_5/: before_after_summary.md  crucible_l1.layout_feedback.json  crucible_l2.layout_feedback.json  crucible_l3.layout_feedback.json  implementation_summary.md  layout_feedback_summary.md  metadata_migration_report.md  tomb_l1.layout_feedback.json
data/: dungeon.js  dungeon_test_data_1.json
dev_diary/: 2026-05-01-project-beginnings.md  2026-05-03-ai-workflow-realizations.md  2026-05-05-context-engineering-lessons.md  2026-05-08-ui-automation-and-reality.md  2026-05-24-testing-realism-and-the-danger-of-mocks.md  README.md
dungeon_daddy/: __main__.py  config.py  window.py
dungeon_daddy/data/: loop_assignment.py  loop_patterns.json  models.py  repository.py
dungeon_daddy/llm/: anthropic_provider.py  context_builder.py  context_compactor.py  context_docs.py  openai_provider.py  prompts.py  provider.py  telemetry.py
dungeon_daddy/llm/agents/: design_agent.py  dm_agent.py  generator_agent.py  wizard_agent.py
dungeon_daddy/map/: graph_renderer.py  grid_renderer.py  layout_debug_renderer.py  layout_renderer.py  loop_overlay.py  routing.py  tiles_renderer.py
dungeon_daddy/map/dungeon_layout/: __init__.py  camera_fit.py  connection_style.py  critical_path_style.py  debug_overlay.py  endpoint_emphasis.py  labels.py  metadata_quality_feedback.py  (+10 more)
dungeon_daddy/prompts/: design_system.txt  dm_system.txt  generator_system.txt  wizard_phase1_system.txt  wizard_phase2_system.txt
dungeon_daddy/ui/: chrome.py  theme.py
dungeon_daddy/views/: design_view.py  play_view.py
prototype/: app.jsx  chrome.jsx  design-mode.jsx  index.html  map.jsx  play-mode.jsx  tokens.css
scripts/: backfill_graph_metadata.py  generate_layout_screenshots_phase25.py
spec/: ARCHITECTURE.md  DATA_MODEL.md  FEATURES.md  FEATURE_DM_STATEFUL_CONVERSATION.md  FEATURE_IP9_MYPY_NONE_GUARDS.md  FEATURE_KNOWLEDGE_GRAPH.md  FEATURE_LEVEL_DESIGN_ENHANCEMENT.md  FEATURE_LOOP_VIEW.md  FEATURE_MAP_CONNECTION_ROUTING.md  FEATURE_MAP_CONNECTION_ROUTING_2.md  FEATURE_MAP_PAN.md  FEATURE_MARKDOWN_CHAT.md  FEATURE_PORTABLE_UI_TESTS.md  FEATURE_RA_PANEL_TRANSPARENCY.md  FEATURE_TEST_DRIVE_VS_START_PLAY.md  FEATURE_ZOOM_MAP.md  HISTORY.md  IMPLEMENTATION_PHASES.md  IMPROVEMENT_PLAN.md  LLM_INTERFACE.md  MAP_LAYOUT_PHASE2.5.md  MAP_LAYOUT_PHASE_2.md  MAP_LAYOUT_PHASE_NEXT.md  PROJECT_INDEX.md  TECH_STACK.md  TESTING.md  TEST_SUITE_ASSESSMENT_20260523.md  TEST_SUITE_IMPROVEMENT.md  UI_SPEC.md  UI_TESTING.md  VISUAL_DESIGN.md
spec/samples/: tomb_of_the_forgotten_king.json
tests/evals/: baseline_scores.json  conftest.py  test_dm_evals.py  test_generator_evals.py
tests/fixtures/: crucible.json  tomb.json
tests/integration/: test_context_pipeline.py  test_dungeon_persistence.py  test_layout_pipeline.py  test_llm_integration.py  test_loop_patterns.py  test_memory_integration.py  test_play_menu.py  test_ui_harness.py  test_validation_persistence.py  test_view_transition.py
tests/unit/: test_window.py
tools/: .gitignore  README.md  arcade_stop.py  dpi.py  generate_layout_screenshots.py  llm_cost_report.py  platform_host.py  platform_stub.py  platform_win32.py  run_b3_test.py  run_evals.py  screenshot_start.py  screenshot_stop.py  smoke_helpers.py  smoke_test_phase10.py  smoke_test_phase11.py  smoke_test_phase12.py  smoke_test_phase13.py  smoke_test_phase16.py  smoke_test_phase17.py  smoke_test_phase3.py  smoke_test_phase5.py  smoke_test_phase6.py  smoke_test_phase7.py  smoke_test_phase8.py  ui_harness.py  ui_input.py  update_diary_index.py
(+82 files in other folders)
