[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dungeon-daddy"
version = "0.1.0"
description = "AI-powered dungeon design and play tool for tabletop game masters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Lawrence Fanizza" }
]
dependencies = [
    "arcade>=3.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pydantic>=2.9",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "mss>=9.0",
]

[project.scripts]
dungeon-daddy = "dungeon_daddy.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "tools/", "prototype/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
