[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dungeon-daddy"
version = "0.1.0"
description = "AI-powered dungeon design and play tool for tabletop game masters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Lawrence Fanizza" }
]
dependencies = [
    "arcade>=3.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pydantic>=2.9",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "mss>=9.0",
]

[project.scripts]
dungeon-daddy = "dungeon_daddy.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_api: requires a real API key; skipped in CI unless key is set",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "tools/", "prototype/"]

# These files have legitimate type issues requiring architectural fixes (None guards,
# dict invariance, object duck-typing) — tracked for the next BUILD phase.
[[tool.mypy.overrides]]
module = [
    "dungeon_daddy.views.design_view",
    "dungeon_daddy.views.play_view",
    "dungeon_daddy.data.repository",
    "dungeon_daddy.window",
    "dungeon_daddy.llm.agents.dm_agent",
    "dungeon_daddy.ui.panels.map_panel",
]
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402", "F841", "E741"]
"tests/**/*.py" = ["E402"]
