[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-daddy"
version = "0.1.0"
description = "AI-powered dungeon design and play tool for tabletop game masters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Lawrence Fanizza" }
]
dependencies = [
    "arcade>=3.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pydantic>=2.9",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "mss>=9.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dungeon-daddy = "dungeon_daddy.__main__:main"

[tool.setuptools.packages.find]
include = ["dungeon_daddy*"]

[tool.setuptools.package-data]
"dungeon_daddy.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_api: requires a real API key; skipped in CI unless key is set",
    "eval: AI output quality evals; require live API; run manually with pytest -m eval",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "tools/", "prototype/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402", "F841", "E741"]
"tests/**/*.py" = ["E402"]
